<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>innotrac_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="krishna8695@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies required for message generation -->
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <!-- Dependencies required at runtime for messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies for testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Specify that this package is part of the rosidl_interface_packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
